fix(backend,frontend): correctness pass against external state of the art
Benchmarked both packs against sources neither the repo nor its author had
read, found where they were wrong, and fixed that first. Depth was added only
where a specific defect demanded it; genuinely absent topics were catalogued
rather than rushed (see "Deliberately not done").

External references actually read (not just cited): addyosmani/agent-skills
(88.8k stars), vercel-labs/agent-skills (30.3k), the Next.js AI-agents guide
and Next 16 release notes, React 19.2, Zalando's REST guidelines, Google AIP,
and Deque's automated-coverage study.

What was WRONG and is now fixed
- a11y-scan gated on WCAG 2.1 tags while accessibility-auditor declares 2.2 AA
  and grades on SC 2.5.8. The pack's only automated gate could return PASS on a
  page its own auditor would BLOCK. Tags now include wcag22aa, target-size is
  explicitly enabled, and axe's `incomplete` bucket is surfaced instead of
  swallowed — ambiguous cases no longer report clean.
- references/nextjs.md instructed agents to write `experimental_ppr`, removed
  in Next 16. Now version-split: read the major from package.json first, and
  "emitting the 15 form against a 16+ project is a build failure, not a warning."
- error-handling mapped ValidationError to 400, contradicting an always-loaded
  rule. Now 422, with 400 reserved for a body that could not be parsed at all.
- "Automated a11y tools catch ~30%" was a bare number with no source in a pack
  whose house rule is cite-or-halt. Replaced with Deque's 57%-of-issues finding
  and the distinction the 30% figure usually elides — share of issues found, not
  share of success criteria a machine can decide.
- websocket-engineer asserted "10-50k connections per Node process" with no
  source — the fabricated-measurement failure the rest of the pack forbids.
- endpoint-tester declared itself "primitive + orchestrator, not two
  implementations" and then reproduced the skill verbatim. Net -14 line